# junior-jobs-bot

./: .gitignore  LICENSE.md  Makefile  Procfile  README.md  bot_script.py  database.sqlite  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test_linter_check.yaml
alembic/versions/: 1732f65a95a4_add_a_column.py  8d619ad6e3d2_create_users_table.py  a1c450c91228_drop_table_requests.py  ab5f2845ce10_add_column_in_statistics2.py  bf472de67613_add_column_in_statistics.py
jun_jobs_bot/: __init__.py  bot.py  dataclasses.py  messages.py  models.py  services.py  settings.py  text.py
jun_jobs_bot/handlers/: admin.py  admin_handler.py  buttons.py  info.py  info_handler.py  messages.py  primary.py  primary_handler.py
jun_jobs_bot/logic/: admin_requests.py  classes.py  dataclasses.py  db_work.py  exceptions.py  services.py  statistics.py  user_requests.py
jun_jobs_bot/scripts/: bot_script.py
tests/: test_jun_jobs_bot.py  test_logic.py
