[tool.poetry]
name = "juniorvacanciesscanner"
version = "0.1.0"
description = ""
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "jun_jobs_bot" },
]


[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.42"
aiogram = "^2.22.2"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"
flake8 = "^5.0.4"
requests-mock = "^1.10.0"
pytest-cov = "^3.0.0"
pytest = "^7.2.0"
loguru = "^0.6.0"
aiogram-unittest = "^0.0.1"
mypy = "^0.990"
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "jun_jobs_bot.scripts.bot_script:main"
